[package]
name = "hlre-async-router"
version = "0.1.0"
authors = ["Tyler Philbrick <t5j6p9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.2.0"
tokio = { version = "1.8", features = ["full"] }

